# ChangeLog for media-video/vlc
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/vlc/ChangeLog,v 1.877 2013/12/07 20:19:42 tomwij Exp $

  07 Dec 2013; Tom Wijsman <TomWij@gentoo.org>
  +files/vlc-2.1.1-freetype-2.5.1-support.patch, vlc-2.1.1.ebuild:
  When freetype-2.5.1 or newer is used, we apply a backported patch to vlc-2.1.1
  support it; fixes bug #493496, reported by Ben de Groot (yngwin).

  06 Dec 2013; Markus Meier <maekke@gentoo.org> vlc-2.0.8.ebuild,
  vlc-2.0.8a.ebuild, vlc-2.0.9.ebuild, vlc-2.1.0.ebuild, vlc-2.1.1.ebuild:
  restore ~arm, bug #489436

*vlc-2.1.1 (17 Nov 2013)

  17 Nov 2013; Tom Wijsman <TomWij@gentoo.org> +vlc-2.1.1.ebuild,
  vlc-2.1.0.ebuild, vlc-2.1.9999.ebuild, vlc-9999.ebuild:
  Version bump to 2.1.1, fixes bug #491184; reported by Ulennrich. Depend on
  dev-qt/qtwidgets:5 for qt5, fixes bug #490164; reported on IRC by okias. SLOT
  vlc from now on, fixes bug #489616; reported by Mike Gilbert (floppym).

  17 Nov 2013; Alexis Ballier <aballier@gentoo.org> vlc-2.1.0.ebuild:
  keyword ~amd64-fbsd, bug #489436

  10 Nov 2013; Tom Wijsman <TomWij@gentoo.org> vlc-2.0.5.ebuild,
  vlc-2.0.6.ebuild, vlc-2.0.7.ebuild, vlc-2.0.8.ebuild, vlc-2.0.8a.ebuild,
  vlc-2.0.9.ebuild, vlc-2.0.9999.ebuild, vlc-2.1.0.ebuild, vlc-2.1.9999.ebuild,
  vlc-9999.ebuild:
  Made USE="vaapi" depend on virtual/ffmpeg[vaapi] as that is needed for GPU
  accelerated decoding; fixes bug #430960 reported by James and dolohow, with
  the help of Alexis Ballier (aballier).

  10 Nov 2013; Tom Wijsman <TomWij@gentoo.org> vlc-2.1.0.ebuild:
  Fix pre-processor checks for 2.1.0 when avcodec USE flag is disabled; fixes
  bug #489612, reported by Maciej Piechotka.

  27 Oct 2013; Tom Wijsman <TomWij@gentoo.org> vlc-2.1.0.ebuild,
  vlc-2.1.9999.ebuild, vlc-9999.ebuild:
  Restrict libav to version >=9.11 when using vdpau USE flag, see bug #489534