@@ -28,19 +28,19 @@ EBUILD vlc-2.0.9.ebuild 13189 SHA256 a2a52804ce239ba7eae80f271c124d43244de668204
 EBUILD vlc-2.0.9999.ebuild 13212 SHA256 86c556ecf191fa8f9b0afb5bda98541bb29013d20614e0631aabcc3195cfae01 SHA512 dc4c067c6bbb3f1e4b5479809e4bbd4d936faeeb466771709fac007c2214f6f86c237dbfe7aa538b96b0ca05893b225a6a7d216f8edddfcff38915bcb75c0410 WHIRLPOOL 1bdc5db654181158f80a12095f16c1a44c0b8ad45e7082abbd5f87d3ea4a0a5fe04870b4668ae1647d594a44b201a03610214172292878d31e8d6132d73c9d4d
 EBUILD vlc-2.1.0.ebuild 14110 SHA256 68dc25a970339a0d3d236c9a606e1b3f2cb912b684893e74766d80ca9bc89e52 SHA512 8f8bf88c4894227a68c22234347591a72d1441c377630deb06a43a714186744056cf808987249287dc55cc361de93cbc2226b104cf0362d46fbc9bed50f8c04d WHIRLPOOL 3889bfb88d9c41046de209f21a91f6d1d2471821091d2104b36992b0b0b777b5217ed27b6bf5281c0e4981470dbda3043542ff8a13e1f7be0a4446976a5d1f7b
 EBUILD vlc-2.1.1.ebuild 14088 SHA256 3c8d5fef2463e4428fbc688517bff267291f7a1a82bb298f65a928e16bc6d6c1 SHA512 c692b567eaa8d2696068af38d4433f10adea3a46048181c79285f47a93722a19b85f933e75aef7db88be6909dbc2b828ebfb31ed54bf461dbd1e5aa98e599008 WHIRLPOOL 0f7c876f8e4a250ca06b56bdea11558e98bcc9dd74a9cc3f29425bd431c14266cd7e7e02e506b319544e6ff9c4c2c2cfe5f56dd0efbaa23f8ff2fa4e86848f7e
-EBUILD vlc-2.1.9999.ebuild 13815 SHA256 72296bf7c6acfd49ee040c229eda0b4e79497c1a72a32a0a00eeaeaa73850ff2 SHA512 2495216f6daf6190d44a2db102fab1403bd8535bcb363775c2ec2d6bee50f281284c64665fa622227792b356fa0740b79527519301cac7ea63c1131b57f8765b WHIRLPOOL cae596a9ccbed0255b57e928b20b6e955e02fdce8af549e1b866474963873b041ed57283c826c4848e71e91cb5e7208ba2cfe71de1e35198e662eeee7dee1604
-EBUILD vlc-9999.ebuild 14052 SHA256 ea74558f511497cc535c2a7afdbccb921cde08354aa53c882207d20fbe8423c4 SHA512 234185f1f530025ea9e2b4f21e972c20a19b7d65039fbebf0151f33b3607ada6e2aacf43252c32f104800805d97c91cb1eeb808de862a1e09e4d017df31a811f WHIRLPOOL 31b6a4cedd567cdf9acaeb71a353fa74a0bcf1dc2b8f48e72fa74716ea530fc24dca5b5192b7b3f66f014fd47c4dbec59174469ce0c7ee50361b352a99725a10
-MISC ChangeLog 21301 SHA256 5252e47c9f780a4bff24bb8407570d3a4677877445e58d9859bd8ca0cdbb53cb SHA512 6e02381daa2d488bec9f89f84f3e77fdd4b50bdd7fa06dd1016860114da036022d3c07e58e1e55405b9ab45ee4df44210286c8be8e81ae4b4a5b27df131d8e51 WHIRLPOOL b89b78a48b8808f3ef7ee18d4a4430bbd2d5d775efac1c071481bb9f668aaf3cfdef6d15a9bf85f6e3e7939ee325a565aa815aafadbd3937065bf36102425dca
+EBUILD vlc-2.1.9999.ebuild 13947 SHA256 105b53b72d05233c45a1175670fa2adc6982dad31fe027e6485b620bbc2bc166 SHA512 deedcc74f04ca19bd0207801cfd6d0c359d24a212f0b65ff4eb6804b9e203a6b4ddd84e35d711e5bfd575d9b37753c311cd19e5496d0e8f3d7b977a61d7dba64 WHIRLPOOL f7ae80c3133f4d18274d0309ad6af5b5e531e0844924ee27973d0d0cdd56d7e1d0c3a2359db092cf8c7ed2c7981c55277320f254b97165b9423354710aa4e028
+EBUILD vlc-9999.ebuild 14184 SHA256 f50d377e89cd0f5ffd4f6114a50135ca2b1c511a7e79476e50c11462ee39cb45 SHA512 9648603195096f07cf8c84a787f7fc1b2a4713b0a3f29dca72eb7ed2968cd3e05625ba298aff32ab2457a1f663d86f3bab78d328f3198c4377bfea0f871cc55d WHIRLPOOL 5102b3af7fcd0cddd6e6bc50802fb0450792f73f68746cb85cbb2902c28e06ef2e303e6dcfda311691fea338c3585890eeee2f22a2d5acd6021bc530e0419e38
+MISC ChangeLog 21435 SHA256 aa6ec5ebe3470d7efcfc1431947fe7932350d95ee80f568902b85528e52d64cb SHA512 77c004f70502a9eb5b0ee114381ff62c5cf7ade69c1ea10ff50c549403f7d02cb4df1514f28bf1ff4423096c3e95ab993c38ef51717b673871c76b5548fa98ae WHIRLPOOL 444b41064f76404d1232edcc118697ed637766fc8ffaeeda992b1d895f9c6287546e3070dbcfbb064f6e14f58d9c57a784684e187cffd6c7d1b026eb01648cf6
 MISC ChangeLog-2011 113818 SHA256 34efd4743fdaa4b24df7042e0cff14ab00cc5fae0838bf489b2eea620654fcc2 SHA512 9b1060fc57d0a8912a38c269b7ec140287c883798f6f3528f0f2d43b5772817f31e0addf4f88f139b82cda4e094d2f9a30e3b9d1933022b81b974436ed158d9d WHIRLPOOL bfe449ace05bac74b195d82eb2b3648b2240f92dabf6446f6ba93ca51b7ecd999ab5b9247dfd1f1a7cdab8d309684ffcd1c829773a471d862c19814a18db7ffe
 MISC metadata.xml 6882 SHA256 3620cc5667481a82177337d6c85e3a85b94850039f7d04a5407a9f19f36d7a82 SHA512 a68bda118fd709fc8ee71d899205080d3108efb8db49bdb74973f434ce3deecc610784d1ca6118a2b09ce62a858ba6d841763d83a71ef5ef8919826e0e5a9638 WHIRLPOOL 8bffe3ded979f9bbd0fa45017900edefb0598f9657fb91de1f918160614af611103425bf9125057b230583071367b0c0144ad839bca9972349be0ee3d980c8d0
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJSo4LkAAoJEJWyH81tNOV9oUAH/3/nREmySff6RWhqtTEI4xCb
-PsrvvIj7CBB8wnG2r4eLz9VPNH7I3zb6bmjOFPDgIs5Bdsyd8j+JpoQLwH9dDcus
-A6cqFuFm+aY1vKeG+Y8C+vnBUFXpgLk5Le36ByUtmyudbxW4TK3nh0wiks1vix5I
-8fttbbgjavVneUB/2dc9Xo7sBePXag5+5lI1GJ/WTMRgsVa0CJ2UmQrkEdPkNfVk
-cTGyNwAhhfaZQZwUYNGzq/JzewcQ8qGQG669X7DP9bijPh+I33z3Y4H8WnYrtftU
-mWAuYxcoklRNG1NZ1KyoUo79somQL54hh4z+qT2JCwWduYS8vNcNFWGEc1lf7Do=
-=1o4U
+iQEcBAEBCAAGBQJSq2KnAAoJEJWyH81tNOV9bBkH+gOJyDDjYuPNEZq/6BkyWryh
+HmbC4FBnAiqCZL9wMigNd1SlrsaFZKSH/QtEeLa7Qmbot2lKcQuH6wgcVp8qbaLv
+6hS+UACQC3tH8P8aq4+y8BSy1469W4MNBbPyk5O6ccs+dokIQUsFpsej2v/lVNL3
+ljJrgCffzuCXcLPkwEP2Cw0TM0XXOFi1Nt+7UQDPhpYA2THEV4Zk8/ydjc00o4z/
+4JwyOoa1/sc7nnfQ6lA4BgQtjuLOVYXDXzC3HUOWU+3B4osgjXb0ajIWZohllhxg
+oqqVbzbSg0mP7N3mcvcOTPC6v56/AUo9l/WKH3z5LeG+dpjirg+7NcqpvE5t9Lo=
+=4knK
 -----END PGP SIGNATURE-----
